# AWS_CLOUD_ML

./: README.md
docs/: 230327_AWSで始めるクラウド開発入門_なぞり.asta
myDir/: .gitignore
myDir/1a_pyTorchTest/sample/: README.md  pyproject.toml
myDir/1a_pyTorchTest/sample/src/: mnist.ipynb  pytorch_get_started.ipynb  simple_mnist.py
