[project]
name = "smaple"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "takahiro-maekawa", email = "koma4024@gmail.com" }
]
dependencies = [
    "torch>=2.2.1",
    "ipykernel>=6.29.3",
    "numpy>=1.24.4",
    "jupyterlab>=4.1.5",
    "torchvision>=0.17.1",
    "matplotlib>=3.7.5",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
